--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "she-care-–-premium-women’s-wellness",
+  "name": "shecare.co-–-premium-women’s-wellness",
   "private": true,
   "version": "0.0.0",
   "type": "module",
