feat: Implement authentication and update site metadata
Introduces user authentication flow via AuthProvider and AuthModal.
Updates project and metadata to reflect the new domain 'shecarehub.com'.
Refactors `types.ts` to remove redundant `SocialLink` and `FooterLink` interfaces.
Resolves JSX type resolution issues for custom elements by correctly importing React.
Adds a basic README for local development setup.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "shecare.co-–-premium-women’s-wellness",
+  "name": "shecarehub.com-–-premium-women’s-wellness",
   "private": true,
   "version": "0.0.0",
   "type": "module",
