feat: Enhance product display and metadata
This commit introduces several improvements to the product display and metadata management:

- Updates the project name and description in `package.json` and `metadata.json` to include "and beauty".
- Adds a `videoUrl` field to the product type definition in `types.ts`.
- Modifies `ProductCard.tsx` to accept and conditionally render a `videoUrl` prop, and adds a "View Details" button.
- Refactors `ProductGallery.tsx` to handle image, 3D model, and video views, making the view switching more robust. It also adds support for a `videoUrl` and displays a "View Details" button.
- Fixes a bug in `ProductShowcase.tsx` where filtering tags would incorrectly include undefined values.

These changes provide a more comprehensive product display, allowing for video content and a clearer way to access product details.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "shecarehub.com-–-premium-women’s-wellness",
+  "name": "shecarehub.com-–-premium-women’s-wellness-and-beauty",
   "private": true,
   "version": "0.0.0",
   "type": "module",
